style.css
body {
    background-image: url(https://igitiskyi.github.io/Portfolio//images/background.jpg);
    background-size: cover;
    height: 100vh;

}

/* Font Style CSS */
.kanit-thin {
  font-family: "Kanit", sans-serif;
  font-weight: 100;
  font-style: normal;
}

.kanit-extralight {
  font-family: "Kanit", sans-serif;
  font-weight: 200;
  font-style: normal;
}

.kanit-light {
  font-family: "Kanit", sans-serif;
  font-weight: 300;
  font-style: normal;
}

.kanit-regular {
  font-family: "Kanit", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.kanit-medium {
  font-family: "Kanit", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.kanit-semibold {
  font-family: "Kanit", sans-serif;
  font-weight: 600;
  font-style: normal;
}

.kanit-bold {
  font-family: "Kanit", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.kanit-extrabold {
  font-family: "Kanit", sans-serif;
  font-weight: 800;
  font-style: normal;
}

.kanit-black {
  font-family: "Kanit", sans-serif;
  font-weight: 900;
  font-style: normal;
}

.kanit-thin-italic {
  font-family: "Kanit", sans-serif;
  font-weight: 100;
  font-style: italic;
}

.kanit-extralight-italic {
  font-family: "Kanit", sans-serif;
  font-weight: 200;
  font-style: italic;
}

.kanit-light-italic {
  font-family: "Kanit", sans-serif;
  font-weight: 300;
  font-style: italic;
}

.kanit-regular-italic {
  font-family: "Kanit", sans-serif;
  font-weight: 400;
  font-style: italic;
}

.kanit-medium-italic {
  font-family: "Kanit", sans-serif;
  font-weight: 500;
  font-style: italic;
}

.kanit-semibold-italic {
  font-family: "Kanit", sans-serif;
  font-weight: 600;
  font-style: italic;
}

.kanit-bold-italic {
  font-family: "Kanit", sans-serif;
  font-weight: 700;
  font-style: italic;
}

.kanit-extrabold-italic {
  font-family: "Kanit", sans-serif;
  font-weight: 800;
  font-style: italic;
}

.kanit-black-italic {
  font-family: "Kanit", sans-serif;
  font-weight: 900;
  font-style: italic;
}

/* End of Font Style CSS */

.nav-link:hover {
    text-shadow:2px 2px 5px whitesmoke;
}

/* Home page */

.quick-me {
  display: flex;
  flex-direction: row;
  align-content: center;
  justify-content: space-evenly;
}

.pfp-img {
  order: 2;
  margin-right: 25%;
  display: flex;
  justify-content: center;
}

.pfp {
    border-radius: 50%;
    height: 300px;
}
.pfp-text {
  justify-content: center;
  flex-direction: column;
  margin: 0 5%;
  order: 1;
  width: 100%;
}

.pfp-text h2 {
  margin-top: 50px;
  margin-bottom: 0px;
  order: 1;
  font-size: 68px;
}

.pfp-text h3 {
  order: 2;
  margin-top: 0px;
  font-size: 36px;
  opacity: 75%;
}

.pfp-text-btns {
  order: 3;
  align-items: center;
  width: 100%;
}

.info-section {
  margin-top: 5%;
  align-content: center;
}

.info-content {
  align-items: center;
  text-align: center;
}

.info-section h2 {
  font-size: 54px;
}
.info-section p {
  font-size: 24px;
}

.about-me {
  text-align: left;
  display: flex;
  margin: auto 25%;
  border-radius: 4%;
  
}

.about-me-edu {
  width: 50%;
  order: 2;
  
}

.edu-box {
  border: 2px solid #ccc; 
  padding: 15px;     
  border-radius: 8px;  
  margin-bottom: 20px;     
  background-color: #f9f9f9;
}

.edu-box-date {
  float: right;
  font-size: 14px;
  color: gray;
  margin-top: 0px;
}

.exp-box {
  border: 2px solid #ccc; 
  padding: 15px;           
  border-radius: 8px;    
  margin-bottom: 20px; 
  background-color: rgba(0, 0, 0, 0.612); 
}

.exp-box-date {
  float: right;
  font-size: 14px;
  color: gray;
  margin-top: 0px;
}

.about-me-edu p { 
  text-align: left;
  font-size: 16px;
}

.about-me-exp {
  width: 50%;
  order: 1;
}



.about-me-exp p {
  font-size: 20px;
}


.about-me-skills {
  text-align: right;
  display: flex;
  flex-direction: row;
  margin: auto 25%;
  border-radius: 4%;
  
}

.info-buttons {
  margin-top: 25px;
  display: flex;
  width: 100%;
  justify-content: space-evenly;
}

.dev-icon {
  width: 50px;
  height: 50px;
  margin-right: 20px;
  transition: transform 0.3s ease;
}

.dev-icons {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: 20px;
}

/* End Home page */

/* Contact page */
.contact-box {
  border-radius: 2%;
  margin: 10% 25%;
  outline: solid 2px rgba(114, 111, 111, 0.341);
  padding-bottom: 20px;
}

.contact-submit {
  width: 95%;
  background-color: white;
}
/* End Contact Page */
/* Projects Page */
.tt-pj {
  font-size: 64px;
}


.most-recent-box h2{
  font-size: 36px;
}
.most-recent-box img {
  outline: solid 2px white;
  float: right;
  height: 350px;
  margin: auto 15%;
}


.most-recent-box p {
  min-width: fit-content;
  font-size: 24px;
}

.pj-gal {
  margin-top: 10%;
   margin-bottom: 5px;
}

#csl-gallery img {
  height: 300px;
  object-fit: contain;
}
/* End Projects Page */

@media (max-width: 1336) {

  .pfp-img {
    order: 1;
    margin: auto 25%;
  }

  .quick-me {
    flex-direction: column;
  }

  .most-recent-img a {
    width: 100%;
  }
  .most-recent-box img {
    clear: both;
    display: block;
    outline: solid 2px white;
    margin: auto 15%;
    height: 750px;
    width: 100%;
  }
  .most-recent-text p {
    margin: 0px;
    width: 100%;
  }

  .pj-gal {
    margin-top: 10px;
    margin-bottom: 20px;
  }
  
}

@media (max-width: 991px) {
  body {
    background-position: right;
    background-size:cover;
    
  }
  .socials {
    display: none;  /* Hide by default when navbar is collapsed */
  }

  /* Home Page */
  .quick-me {
    width: 100%;
    flex-direction: column;
  }

  .pfp-img {
    order: 1;
    margin: auto 25%;
  }

  .pfp {
    max-height: 250px;
    max-width: 234px;
  }

  .pfp-text {
    font-size: 28px;
    margin: 5px;
  }

  .info-section {
    padding-bottom: 30px;
  }

  .info-section h2 {
    font-size: 24px;
  }

  .info-section p {
    margin: 30px 20px;
    font-size: 18px;
  }

  /* End Home Page */
  /* Contact Page */
  .contact-box {
    outline: none;
    margin: 25% 5%;
  }
  /* End of Contact Page */

  /* Projects Page */
  .most-recent-box img {
    float: none;
    outline: solid 2px white;
    margin: auto 50%;
    height: auto;
    margin: auto 10%;
    max-width: 80%;
  }


  .about-me {
    flex-direction: column;
    margin: auto 5%;
  }

  .about-me-exp {
    order: 1;
    width: 100%;
  }

  .about-me-edu {
    width: 100%;
    order: 2;
  }
  

}


  
  @media (min-width: 992px) {
    .socials {
      display: block; /* Show LinkedIn and email link when navbar is expanded */
    }

  .about-me {
    flex-direction: column;
    margin: auto 5%;
  }

  .about-me-exp {
    order: 1;
    width: 100%;
  }

  .about-me-edu {
    width: 100%;
    order: 2;
  }
  

  }

